as 변환기,  클리닝함수 만들기

--- a/001. 기초/index.html
+++ b/001. 기초/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <script src="/001. 기초/004_함수타입지정,void.js"></script>
+    <script src="/001. 기초/005_타입확정_Narrowing,Assertion.js"></script>
 </body>
 
 </html>
