type alias & readonly

--- a/001. 기초/index.html
+++ b/001. 기초/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <script src="/001. 기초/005_타입확정_Narrowing,Assertion.js"></script>
+    <script src="/001. 기초/006_type_alias(타입변수)&readonly.js"></script>
 </body>
 
 </html>
