--- a/001. 기초/index.html
+++ b/001. 기초/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <script src="/001. 기초/006_type_alias(타입변수)&readonly.js"></script>
+    <script src="/001. 기초/008_함수&method에type_alias지정.js"></script>
 </body>
 
 </html>
