--- a/001. 기초/index.html
+++ b/001. 기초/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <script src="/001. 기초/008_함수&method에type_alias지정.js"></script>
+    <script src="/001. 기초/010_(JS)_class.js"></script>
 </body>
 
 </html>
