--- a/002. TS/index.html
+++ b/002. TS/index.html
@@ -9,7 +9,11 @@
 </head>
 
 <body>
-    <script src="/002. TS/003_never type.js"></script>
+    <script src="/002. TS/data.js"></script>
+    <!-- <script src="/002. TS/004_public,private.js"></script> -->
+    <!-- <script src="/002. TS/005_protected,static.js"></script> -->
+    <!-- <script src="/002. TS/007_Generic.js"></script> -->
+    <script src="/002. TS/011_declare&ambient_module.js"></script>
 </body>
 
 </html>
